--- a/src/css/futaba.css
+++ b/src/css/futaba.css
@@ -31,10 +31,10 @@
 }
 
 /* Catalog */
-:root.futaba .catalog-thread:hover .post {
+:root.futaba .catalog-thread > .postContainer:hover > .post {
   background-color: #F0E0D6;
 }
-:root.futaba.werkTyme .catalog-thread:not(:hover), :root.futaba .catalog-thread:hover .post {
+:root.futaba.werkTyme .catalog-thread:not(:hover), :root.futaba .catalog-thread > .postContainer:hover > .post {
   border-color: #D9BFB7;
 }
 
