--- a/src/css/photon.css
+++ b/src/css/photon.css
@@ -31,10 +31,10 @@
 }
 
 /* Catalog */
-:root.photon .catalog-thread:hover .post {
+:root.photon .catalog-thread > .postContainer:hover > .post {
   background-color: #DDD;
 }
-:root.photon.werkTyme .catalog-thread:not(:hover), :root.photon .catalog-thread:hover .post {
+:root.photon.werkTyme .catalog-thread:not(:hover), :root.photon .catalog-thread > .postContainer:hover > .post {
   border-color: #CCC;
 }
 :root.photon .catalog-code {
