--- a/src/css/style.css
+++ b/src/css/style.css
@@ -722,26 +722,43 @@ div[data-checked="false"] > .suboption-list {
 div.catalog-thread {
   margin: 4px;
 }
-.catalog-thread > .postContainer {
-  overflow: hidden;
-}
-.catalog-small .catalog-thread,
-.catalog-small .catalog-thread > .postContainer {
+.catalog-small .catalog-thread {
   width: 165px;
   height: 320px;
 }
-.catalog-large .catalog-thread,
-.catalog-large .catalog-thread > .postContainer {
+.catalog-large .catalog-thread {
   width: 270px;
   height: 410px;
 }
-.catalog-thread .post {
-  margin: -1px;
-  border: 1px solid transparent;
+.catalog-thread > .postContainer {
+  position: absolute;
+  top: -4px;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
-.catalog-thread:not(.noFile) .post {
-  margin-top: -21px;
+.catalog-thread > .postContainer:not(:hover) {
+  overflow: hidden;
+}
+.catalog-thread > .postContainer:hover {
+  z-index: 1;
+}
+.catalog-thread .post {
+  position: absolute;
+  top: 4px;
+  left: 0;
+  right: 0;
+  margin: -21px -1px -1px;
+  border: 1px solid transparent;
   padding-top: 20px;
+}
+.catalog-thread.noFile .post {
+  margin-top: -5px;
+  padding-top: 4px;
+}
+.catalog-thread > .postContainer:hover .post {
+  margin-left: -61px;
+  margin-right: -61px;
 }
 .catalog-link {
   display: block;
@@ -790,8 +807,8 @@ div.catalog-thread {
 .catalog-thread blockquote {
   margin: 0;
 }
-#delform .catalog-thread:not(:hover) .file,
-#delform .catalog-thread:not(:hover) .postInfo,
+#delform .catalog-thread > .postContainer:not(:hover) .file,
+#delform .catalog-thread > .postContainer:not(:hover) .postInfo,
 #delform .catalog-thread > .postContainer > :not(.post),
 #delform .catalog-thread .file > :not(.fileText),
 #delform .catalog-thread .file > .fileText > :not(:first-child),
@@ -803,9 +820,9 @@ div.catalog-thread {
 }
 .catalog-thread .file {
   position: absolute;
-  left: -60px;
-  right: -60px;
-  top: -20px;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 .catalog-thread .fileText {
   padding: 2px;
@@ -829,16 +846,6 @@ div.catalog-thread {
 .catalog-thread .dateTime {
   display: inline-block;
   font-style: italic;
-}
-.catalog-thread:hover {
-  z-index: 1;
-}
-.catalog-thread:hover > .postContainer {
-  overflow: visible;
-}
-.catalog-thread:hover .post {
-  margin-left: -61px;
-  margin-right: -61px;
 }
 .catalog-thread .prettyprinted {
   max-width: 100%;
