--- a/src/css/yotsuba-b.css
+++ b/src/css/yotsuba-b.css
@@ -31,10 +31,10 @@
 }
 
 /* Catalog */
-:root.yotsuba-b .catalog-thread:hover .post {
+:root.yotsuba-b .catalog-thread > .postContainer:hover > .post {
   background-color: #D6DAF0;
 }
-:root.yotsuba-b.werkTyme .catalog-thread:not(:hover), :root.yotsuba-b .catalog-thread:hover .post {
+:root.yotsuba-b.werkTyme .catalog-thread:not(:hover), :root.yotsuba-b .catalog-thread > .postContainer:hover > .post {
   border-color: #B7C5D9;
 }
 
